# scanny

./: LICENSE  LICENSE.txt  Powershell Script For Scanner.py file.ps1  README.md  scanner.ps1  scanner.py  setup.cfg
.github/workflows/: python-app.yml
src/scanny/: Scanny PowerShell.ps1  __init__.py  scanny.py
src/scanny.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
