[metadata]
name = scanny
version = 0.0.1
author = Hardik Shah
author_email = hardik.2673@gmail.com
description = Module for Python. This Module will enable a user to use any flatbed scanner using python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hardik-26/Flatbed-Scanner
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src